// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuScreen should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuScreen
    links={
      Array [
        Object {
          "condition": true,
          "label": "debug",
          "onPress": [MockFunction],
          "source": 1234,
        },
        Object {
          "label": "activity history",
          "onPress": [MockFunction],
        },
        Object {
          "condition": true,
          "label": "leaderboard",
          "onPress": [MockFunction],
        },
        Object {
          "label": "member zone",
          "onPress": [MockFunction],
        },
      ]
    }
    onPressClose={[MockFunction]}
    version="1.0.0"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 180,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/menu/x.png",
                }
              }
              style={
                Object {
                  "height": 26,
                  "width": 26,
                }
              }
            />
          </TouchableOpacity>
          <Component
            style={
              Object {
                "marginBottom": 68,
                "width": 112,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/menu/logo.png",
                }
              }
              style={Object {}}
            />
          </Component>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 116,
              }
            }
          >
            <Component
              style={
                Object {
                  "width": 112,
                }
              }
            >
              <Image
                source={1234}
                style={Object {}}
              />
            </Component>
            <Component
              style={
                Object {
                  "paddingRight": 16,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "rgb(51,51,51)",
                    "fontSize": 36,
                    "width": "100%",
                  }
                }
              >
                debug  
              </YuText>
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 116,
              }
            }
          >
            <Component
              style={
                Object {
                  "paddingRight": 16,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "rgb(51,51,51)",
                    "fontSize": 36,
                    "width": "100%",
                  }
                }
              >
                leaderboard  
              </YuText>
            </Component>
          </TouchableOpacity>
        </Component>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "bottom": 20,
              "justifyContent": "center",
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(201,201,201)",
                "fontSize": 20,
                "textAlign": "center",
              }
            }
          >
            1.0.0
          </YuText>
        </Component>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>,
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>,
            Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 116,
                  }
                }
              >
                <Component
                  style={
                    Object {
                      "width": 112,
                    }
                  }
                >
                  <Image
                    source={1234}
                    style={Object {}}
                  />
                </Component>
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    debug  
                  </YuText>
                </Component>
              </TouchableOpacity>,
              null,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 116,
                  }
                }
              >
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    leaderboard  
                  </YuText>
                </Component>
              </TouchableOpacity>,
              null,
            ],
          ],
          "style": Object {
            "backgroundColor": "white",
            "flex": 1,
            "paddingLeft": 210,
            "paddingTop": 180,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />,
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../assets/menu/x.png",
                },
                "style": Object {
                  "height": 26,
                  "width": 26,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/logo.png",
                  }
                }
                style={Object {}}
              />,
              "style": Object {
                "marginBottom": 68,
                "width": 112,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../assets/menu/logo.png",
                },
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                <Component
                  style={
                    Object {
                      "width": 112,
                    }
                  }
                >
                  <Image
                    source={1234}
                    style={Object {}}
                  />
                </Component>,
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    debug  
                  </YuText>
                </Component>,
              ],
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 116,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Image
                    source={1234}
                    style={Object {}}
                  />,
                  "style": Object {
                    "width": 112,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": 1234,
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    debug  
                  </YuText>,
                  "style": Object {
                    "paddingRight": 16,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "bold": true,
                    "children": "debug  ",
                    "style": Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    },
                  },
                  "ref": null,
                  "rendered": "debug  ",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                undefined,
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    leaderboard  
                  </YuText>
                </Component>,
              ],
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 116,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    leaderboard  
                  </YuText>,
                  "style": Object {
                    "paddingRight": 16,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "bold": true,
                    "children": "leaderboard  ",
                    "style": Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    },
                  },
                  "ref": null,
                  "rendered": "leaderboard  ",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(201,201,201)",
                "fontSize": 20,
                "textAlign": "center",
              }
            }
          >
            1.0.0
          </YuText>,
          "style": Object {
            "alignItems": "center",
            "bottom": 20,
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "1.0.0",
            "style": Object {
              "color": "rgb(201,201,201)",
              "fontSize": 20,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "1.0.0",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
                "paddingLeft": 210,
                "paddingTop": 180,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 116,
                }
              }
            >
              <Component
                style={
                  Object {
                    "width": 112,
                  }
                }
              >
                <Image
                  source={1234}
                  style={Object {}}
                />
              </Component>
              <Component
                style={
                  Object {
                    "paddingRight": 16,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    }
                  }
                >
                  debug  
                </YuText>
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 116,
                }
              }
            >
              <Component
                style={
                  Object {
                    "paddingRight": 16,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    }
                  }
                >
                  leaderboard  
                </YuText>
              </Component>
            </TouchableOpacity>
          </Component>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "bottom": 20,
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(201,201,201)",
                  "fontSize": 20,
                  "textAlign": "center",
                }
              }
            >
              1.0.0
            </YuText>
          </Component>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 112,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "top": 20,
                    "width": 92,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />
              </TouchableOpacity>,
              <Component
                style={
                  Object {
                    "marginBottom": 68,
                    "width": 112,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/logo.png",
                    }
                  }
                  style={Object {}}
                />
              </Component>,
              Array [
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 116,
                    }
                  }
                >
                  <Component
                    style={
                      Object {
                        "width": 112,
                      }
                    }
                  >
                    <Image
                      source={1234}
                      style={Object {}}
                    />
                  </Component>
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      debug  
                    </YuText>
                  </Component>
                </TouchableOpacity>,
                null,
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 116,
                    }
                  }
                >
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      leaderboard  
                    </YuText>
                  </Component>
                </TouchableOpacity>,
                null,
              ],
            ],
            "style": Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 180,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />,
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../assets/menu/x.png",
                  },
                  "style": Object {
                    "height": 26,
                    "width": 26,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/logo.png",
                    }
                  }
                  style={Object {}}
                />,
                "style": Object {
                  "marginBottom": 68,
                  "width": 112,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../assets/menu/logo.png",
                  },
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  <Component
                    style={
                      Object {
                        "width": 112,
                      }
                    }
                  >
                    <Image
                      source={1234}
                      style={Object {}}
                    />
                  </Component>,
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      debug  
                    </YuText>
                  </Component>,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 116,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={1234}
                      style={Object {}}
                    />,
                    "style": Object {
                      "width": 112,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": 1234,
                      "style": Object {},
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      debug  
                    </YuText>,
                    "style": Object {
                      "paddingRight": 16,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "debug  ",
                      "style": Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      },
                    },
                    "ref": null,
                    "rendered": "debug  ",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            null,
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  undefined,
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      leaderboard  
                    </YuText>
                  </Component>,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 116,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      leaderboard  
                    </YuText>,
                    "style": Object {
                      "paddingRight": 16,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "leaderboard  ",
                      "style": Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      },
                    },
                    "ref": null,
                    "rendered": "leaderboard  ",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(201,201,201)",
                  "fontSize": 20,
                  "textAlign": "center",
                }
              }
            >
              1.0.0
            </YuText>,
            "style": Object {
              "alignItems": "center",
              "bottom": 20,
              "justifyContent": "center",
              "position": "absolute",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "1.0.0",
              "style": Object {
                "color": "rgb(201,201,201)",
                "fontSize": 20,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "1.0.0",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`MenuScreen should render without links 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuScreen
    links={null}
    onPressClose={[MockFunction]}
    version="1.0.0"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 180,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/menu/x.png",
                }
              }
              style={
                Object {
                  "height": 26,
                  "width": 26,
                }
              }
            />
          </TouchableOpacity>
          <Component
            style={
              Object {
                "marginBottom": 68,
                "width": 112,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../assets/menu/logo.png",
                }
              }
              style={Object {}}
            />
          </Component>
        </Component>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "bottom": 20,
              "justifyContent": "center",
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(201,201,201)",
                "fontSize": 20,
                "textAlign": "center",
              }
            }
          >
            1.0.0
          </YuText>
        </Component>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>,
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>,
            null,
          ],
          "style": Object {
            "backgroundColor": "white",
            "flex": 1,
            "paddingLeft": 210,
            "paddingTop": 180,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />,
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../assets/menu/x.png",
                },
                "style": Object {
                  "height": 26,
                  "width": 26,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/logo.png",
                  }
                }
                style={Object {}}
              />,
              "style": Object {
                "marginBottom": 68,
                "width": 112,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../assets/menu/logo.png",
                },
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(201,201,201)",
                "fontSize": 20,
                "textAlign": "center",
              }
            }
          >
            1.0.0
          </YuText>,
          "style": Object {
            "alignItems": "center",
            "bottom": 20,
            "justifyContent": "center",
            "position": "absolute",
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "1.0.0",
            "style": Object {
              "color": "rgb(201,201,201)",
              "fontSize": 20,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "1.0.0",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
                "paddingLeft": 210,
                "paddingTop": 180,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/menu/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>
          </Component>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "bottom": 20,
                "justifyContent": "center",
                "position": "absolute",
                "width": "100%",
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(201,201,201)",
                  "fontSize": 20,
                  "textAlign": "center",
                }
              }
            >
              1.0.0
            </YuText>
          </Component>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 112,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "top": 20,
                    "width": 92,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />
              </TouchableOpacity>,
              <Component
                style={
                  Object {
                    "marginBottom": 68,
                    "width": 112,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/logo.png",
                    }
                  }
                  style={Object {}}
                />
              </Component>,
              null,
            ],
            "style": Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 180,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />,
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../assets/menu/x.png",
                  },
                  "style": Object {
                    "height": 26,
                    "width": 26,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../assets/menu/logo.png",
                    }
                  }
                  style={Object {}}
                />,
                "style": Object {
                  "marginBottom": 68,
                  "width": 112,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../assets/menu/logo.png",
                  },
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(201,201,201)",
                  "fontSize": 20,
                  "textAlign": "center",
                }
              }
            >
              1.0.0
            </YuText>,
            "style": Object {
              "alignItems": "center",
              "bottom": 20,
              "justifyContent": "center",
              "position": "absolute",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "1.0.0",
              "style": Object {
                "color": "rgb(201,201,201)",
                "fontSize": 20,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "1.0.0",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
